добавил значение value для свойств продукта и вывел их при выборке
