# app/Http/Controllers/ApiController.php
@@ -9,39 +9,6 @@ class ApiController extends Controller
 
 
 
-    /**
-     * @OA\Get(
-     *     path="/api/products",
-     *     operationId="getProducts",
-     *     tags={"Products"},
-     *     summary="Получение списка товаров",
-     *     description="Получение списка товаров с авторизацией по Bearer токену.",
-     *     security={
-     *         {"bearerAuth": {}}
-     *     },
-     *     @OA\Response(
-     *         response=200,
-     *         description="Список товаров успешно получен",
-     *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(
-     *                 type="object",
-     *                 @OA\Property(property="id", type="integer", example=1),
-     *                 @OA\Property(property="name", type="string", example="Продукт 1"),
-     *                 @OA\Property(property="price", type="number", format="float", example=19.99),
-     *             ),
-     *         ),
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="Неавторизованный доступ",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(property="error", type="string", example="Требуется авторизация"),
-     *         ),
-     *     ),
-     * )
-     */
     public function getProducts()
     {
 //        $this->middleware('auth:api');
@@ -57,15 +24,6 @@ class ApiController extends Controller
 
         return response()->json($products, 200);
     }
-
-
-
-
-
-
-
-
-
 
 
     /**
