# app/Http/Controllers/ProductController.php
@@ -9,6 +9,44 @@ use Illuminate\Http\Request;
 class ProductController extends Controller
 {
     /**
+     * @OA\Get(
+     *     path="/api/products",
+     *     operationId="getProducts",
+     *     tags={"Products"},
+     *     summary="Получение списка товаров",
+     *     description="Получение списка товаров с авторизацией по Bearer токену.",
+     *     security={
+     *         {"bearerAuth": {}}
+     *     },
+     * @OA\Parameter(
+     *          name="page",
+     *          in="query",
+     *          description="Номер страницы",
+     *          @OA\Schema(type="integer", format="int32", default=1),
+     *      ),
+     * @OA\Response(
+     *         response=200,
+     *         description="Список товаров успешно получен",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer", example=1),
+     *                 @OA\Property(property="name", type="string", example="Продукт 1"),
+     *                 @OA\Property(property="price", type="number", format="float", example=19.99),
+     *             ),
+     *         ),
+     *     ),
+     * @OA\Response(
+     *         response=401,
+     *         description="Неавторизованный доступ",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="string", example="Требуется авторизация"),
+     *         ),
+     *     ),
+     * )
+     *
      * Получение списка товаров
      *
      * @return \Illuminate\Http\Response
